--- a/build.gradle
+++ b/build.gradle
@@ -22,10 +22,12 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-mail'
-	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.3.0'
+	
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	implementation 'jakarta.validation:jakarta.validation-api:3.0.2'
+	
 	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
+	
 	runtimeOnly 'org.postgresql:postgresql'
 	
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
@@ -34,8 +36,10 @@ dependencies {
 	 implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
     runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
     runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5' 
-    
-
+     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.7.0'
+ 
+	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
+	
 }
 
 tasks.named('test') {
