--- a/build.gradle
+++ b/build.gradle
@@ -25,6 +25,7 @@ dependencies {
 	
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	implementation 'jakarta.validation:jakarta.validation-api:3.0.2'
+		implementation 'org.springframework.boot:spring-boot-starter-websocket'
 	
 	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
 	
