add stats for delivery agent

--- a/.gitignore
+++ b/.gitignore
@@ -15,7 +15,9 @@ build/
 .sts4-cache
 application.properties
 src/main/resources/static/uploads/
+src/main/resources/maps/
 /uploads/
+graph-cache/
 
 
 bin/
